[caleb-kan] fix: Fix card height overflow

--- a/jemdoc.css
+++ b/jemdoc.css
@@ -47,13 +47,13 @@ canvas.particles-js-canvas-el {
     pointer-events: none;
 }
 
-html, body {
+html {
     height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
 body {
+    min-height: 100%;
+    margin: 0;
     background: linear-gradient(-45deg,
         var(--gradient-color-1),
         var(--gradient-color-2),
